// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Play Button Component Should render correctly according to snapshot 1`] = `
<div
  className="btnContainer"
>
  <FontAwesomeIcon
    border={false}
    className="playBtn"
    fixedWidth={false}
    flip={null}
    icon="play-circle"
    inverse={false}
    listItem={false}
    mask={null}
    pull={null}
    pulse={false}
    rotation={null}
    size={null}
    spin={false}
    style={
      Object {
        "height": "60px",
        "width": "60px",
      }
    }
    symbol={false}
    title=""
    transform={null}
  />
</div>
`;

exports[`Play Button Component should mount correctly 1`] = `
<PlayButton>
  <div
    className="btnContainer"
  >
    <FontAwesomeIcon
      border={false}
      className="playBtn"
      fixedWidth={false}
      flip={null}
      icon="play-circle"
      inverse={false}
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      style={
        Object {
          "height": "60px",
          "width": "60px",
        }
      }
      symbol={false}
      title=""
      transform={null}
    />
  </div>
</PlayButton>
`;

exports[`Play Button Component should render correctly 1`] = `
<div
  class="btnContainer"
/>
`;

exports[`Play Button Component should render correctly in "debug" mode 1`] = `
<div
  className="btnContainer"
>
  <FontAwesomeIcon
    border={false}
    className="playBtn"
    fixedWidth={false}
    flip={null}
    icon="play-circle"
    inverse={false}
    listItem={false}
    mask={null}
    pull={null}
    pulse={false}
    rotation={null}
    size={null}
    spin={false}
    style={
      Object {
        "height": "60px",
        "width": "60px",
      }
    }
    symbol={false}
    title=""
    transform={null}
  />
</div>
`;
